# generated/api/Subscriber.api.js
@@ -47,11 +47,19 @@ app.post('/Subscriber/recreateTable',function(req,res){
         type:'object',
         schema: { $ref: '#/definitions/Subscriber' }
       }
+      #swagger.responses[200] = {
+              description: 'Subscriber list successfully obtained.',
+              schema: {$ref: '#/definitions/Subscriber'}
+      }
     */
     let result=null;
     let error=null;
     try{
-      res.send(/*JSON.stringify*/(dao.insert(req.body)));
+      console.log('Subscriber.insert',req.body);
+      const insertResult = dao.insert(req.body);
+      console.log('insertResult',insertResult)
+      const lastInserted=dao.getByRowid(insertResult.lastInsertRowid)
+      res.send(/*JSON.stringify*/(lastInserted));
       res.end();
     }catch(err){
       throw err;
@@ -71,6 +79,7 @@ app.post('/Subscriber/recreateTable',function(req,res){
     let result=null;
     let error=null;
     try{
+      console.log('Subscriber.updateSingle',req.body);
       res.send(/*JSON.stringify*/(dao.updateSingle(req.body)));
       res.end();
     }catch(err){
@@ -78,30 +87,25 @@ app.post('/Subscriber/recreateTable',function(req,res){
     }
   });
 
-  app.delete('/Subscriber',function(req,res){
+  app.delete('/Subscriber/:subscriber_id',function(req,res){
     // #swagger.tags = ['Subscribers']
     /*
-      #swagger.parameters['Subscriber'] = {
-        in: 'body',
-        description: 'Delete Subscriber',
-        type:'object',
-        schema: { $ref: '#/definitions/Subscriber' }
-      }
     */
     let result=null;
     let error=null;
     try{
-      res.send(/*JSON.stringify*/(dao.deleteSingle({watcher_id:req.body.watcher_id})));
+      console.log('Subscriber.updateSingle',req.body);
+      res.send(/*JSON.stringify*/(dao.deleteSingle({subscriber_id:req.params.subscriber_id})));
       res.end();
     }catch(err){
       throw err;
     }
   });
 
-  app.get('/Subscriber/:watcher_id',function(req,res){
+  app.get('/Subscriber/:subscriber_id',function(req,res){
     /* 
     #swagger.tags = ['Subscribers']
-    #swagger.description = 'get details of Subscriber by watcher_id'
+    #swagger.description = 'get details of Subscriber by subscriber_id'
     #swagger.responses[200] = {
             description: 'Subscriber successfully obtained.',
             schema: { $ref: '#/definitions/Subscriber' }
@@ -109,7 +113,43 @@ app.post('/Subscriber/recreateTable',function(req,res){
     let result=null;
     let error=null;
     try{
-      res.send(dao.getSingle({watcher_id:req.params.watcher_id}));
+      res.send(dao.getSingle({subscriber_id:req.params.subscriber_id}));
+      res.end();
+    }catch(err){
+      throw err;
+    }
+  });
+
+  app.get('/Subscribers',function(req,res){
+    /* 
+    #swagger.tags = ['Subscribers']
+    #swagger.description = 'get all Subscribers'
+    #swagger.responses[200] = {
+            description: 'Subscriber list successfully obtained.',
+            schema: { type:'array',item:{$ref: '#/definitions/Subscriber'} }
+    } */
+    let result=null;
+    let error=null;
+    try{
+      res.send(/*JSON.stringify*/(dao.getLast()));
+      res.end();
+    }catch(err){
+      throw err;
+    }
+  });
+
+  app.get('/Subscriber/rowid/:rowid',function(req,res){
+    /* 
+    #swagger.tags = ['Subscribers']
+    #swagger.description = 'get details of Subscriber by rowid'
+    #swagger.responses[200] = {
+            description: 'Subscriber successfully obtained.',
+            schema: { $ref: '#/definitions/Subscriber' }
+    } */
+    let result=null;
+    let error=null;
+    try{
+      res.send(dao.getByRowid(req.params.rowid));
       res.end();
     }catch(err){
       throw err;
@@ -131,15 +171,15 @@ app.post('/Subscriber/recreateTable',function(req,res){
     }
   });
 
-  app.get('/Subscriber/getBy_subscriber_id/:subscriber_id',function (req,res){
+  app.get('/Subscriber/getBy_watcher_id/:watcher_id',function (req,res){
     /*
     #swagger.tags = ['Subscribers']
-    #swagger.description  = 'get all Subscribers by subscriber_id'
+    #swagger.description  = 'get all Subscribers by watcher_id'
     */
     let result=null;
     let error=null;
     try{
-      res.send(dao.getBYsubscriber_id({subscriber_id:req.params.subscriber_id}));
+      res.send(dao.getBYwatcher_id({watcher_id:req.params.watcher_id}));
       res.end();
     }catch(err){
       throw err;
@@ -147,15 +187,15 @@ app.post('/Subscriber/recreateTable',function(req,res){
   }
 );
 
-  app.get('/Subscriber/countBy_subscriber_id/:subscriber_id',function (req,res){
+  app.get('/Subscriber/countBy_watcher_id/:watcher_id',function (req,res){
     /*
     #swagger.tags = ['Subscribers']
-    #swagger.description  = 'count all Subscribers by subscriber_id'
+    #swagger.description  = 'count all Subscribers by watcher_id'
     */
     let result=null;
     let error=null;
     try{
-      res.send(dao.countBYsubscriber_id({subscriber_id:req.params.subscriber_id}));
+      res.send(dao.countBYwatcher_id({watcher_id:req.params.watcher_id}));
       res.end();
     }catch(err){
       throw err;
