# model.json.js
@@ -28,8 +28,8 @@ const model={
       crt_value_hash:"",
     },
     Subscriber:{
-      watcher_id:"autogenerated as uuid(32) by sql engine",
-      subscriber_id:"",
+      subscriber_id:"autogenerated as uuid(32) by sql engine",
+      watcher_id:"",
       owner_group_id:"",
       source:`module.exports≈{
         main({modules,data}){
